@@ -1,10 +1,16 @@
-2011-01-14  Charlie Zender  <zender@uci.edu>
+2011-01-16  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.0.7 release procedure:
  	Changes since nco-4_0_6: 
 	cd ~/nco;cvs tag -d nco-4_0_7;cvs tag -d nco-4_0_7-1
 	cd ~/nco;cvs commit -m "Preparing nco-4.0.7 release"
 	cvs tag -c nco-4_0_7;cvs tag -c nco-4_0_7-1
+
+	* Tidy ncatted.c, ncrename.c
+
+	* Add helpful debugging output to nco_aed_prc()
+
+2011-01-14  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.0.6 release procedure:
  	Changes since nco-4_0_5: clang, YYYYMMDD-averaging, xtr ass crd
